# chip8-rusterpreter

./: .gitignore  Cargo.toml  README  README.md  chip8-config.yaml
chip8/: Cargo.toml  README
chip8/src/: chip8.rs  config.rs  lib.rs  main.rs  operations_set.rs  timers.rs
chip8/src/operations_set/: operations_table.rs  opt_1.rs  opt_2.rs  opt_3.rs  opt_4.rs  opt_5.rs  opt_6.rs  opt_7.rs  opt_8.rs  opt_9.rs  opt_a.rs  opt_b.rs  opt_c.rs  opt_d.rs  opt_f.rs
debugger/: Cargo.toml  README
debugger/src/: components.rs  debugger.rs  display.rs  main.rs  scaffold.rs
debugger/src/components/: command.rs  registers.rs  registers_component.rs  screen.rs  text.rs  timers.rs
src/: chip8.rs  lib.rs  main.rs  operation_table.rs  operations_set.rs  timers.rs
src/operations_set/: operations_table.rs  opt8.rs  opt_a.rs  opt_d.rs  opt_f.rs
tests/: labels_program.txt  labels_program_with_directives.txt  mock_program.txt  mock_program_directives.txt  new_mock.txt
