[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
once_cell = "1.18.0"
parking_lot = "0.6.4"
rand = "0.8.5"
sdl2 = "0.35.2"
serde = {version="1.0", features=["derive"]}
serde_yaml = "0.9"
