[package]
name = "debugger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chip8 = { path = "../chip8" }
crossterm = { version = "0.25.0", features = [ "serde" ] }
serde = {version = "1.0", features = ["derive"] }
tui = { version = "0.19.0", default-features = false, features = ['crossterm', 'serde'] }
tui-textarea = { version = "0.2.0", features = ["arbitrary", "crossterm"] }

